[package]
name = "Longshot"
version = "1.0.0"
authors = ["neoarz, Mel"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10"
lazy_static = "1.4.0"
hyper = "0.13"
hyper-tls = "0.4"
chrono = "0.4"
log = "0.4"
colored = "2.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
futures = "0.3"
once_cell = "1.19"
socket2 = "0.3.19"

[dependencies.serenity]
git = "https://github.com/neoarz/serenity"
branch = "current"
default-features = false
features = ["client", "native_tls_backend", "model", "builder", "cache", "http", "utils", "gateway"]

[dependencies.tokio]
version = "0.2"
features = ["macros"]

[dependencies.fern]
version = "0.6.0"
features = ["colored"]

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }