[package]
name = "Longshot"
version = "1.0.0"
authors = ["neoarz, Mel"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.12.2"
lazy_static = "1.5.0"
hyper = "0.13"
hyper-tls = "0.4"
chrono = "0.4.42"
log = "0.4.28"
colored = "3.0.0"
serde = "1.0.228"
serde_json = "1.0.145"
futures = "0.3.31"
once_cell = "1.21.3"
socket2 = "0.6.1"

[dependencies.serenity]
git = "https://github.com/neoarz/serenity"
branch = "current"
default-features = false
features = ["client", "native_tls_backend", "model", "builder", "cache", "http", "utils", "gateway"]

[dependencies.tokio]
version = "0.2"
features = ["macros"]

[dependencies.fern]
version = "0.6.0"
features = ["colored"]

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }